--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,26 @@
+<div class="nav"></div>
 <div class="container body">
+</div>
+<div class="container body2 dnone">
+
+</div>
+<script type="text/x-handlebars-temmplate" id="entertodo">
   <div class="row">
-    <div class="col-md-12">
-      <input class="width100p new-todo" type="text" placeholder="Enter a todo">
+      <div class="col-md-12">
+        <input class="width100p new-todo" type="text" placeholder="Enter a todo">
+      </div>
+  </div>
+</script>
+<script type="text/x-handlebars-template" id="nav">
+  <div class="navbar navbar-default">
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="home"><a>Home</a></li>
+        <li class="kanban"><a>Kanban</a></li>
+      </ul>
     </div>
   </div>
-</div>
+</script>
 <script id="example" type="text/x-handlebars-template">
   <div class="row hover">
   {{#if completed}}
