--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,7 +16,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="home"><a>Home</a></li>
-        <li class="kanban"><a>Kanban</a></li>
+        <li class="kanban"><a>About</a></li>
       </ul>
     </div>
   </div>
